--- a/src/components/tickets/customers/customer.css
+++ b/src/components/tickets/customers/customer.css
@@ -10,3 +10,32 @@
     flex-basis: 31%;
     margin: 0.5rem;
   }
+
+  .user:hover {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  section.customer {
+    margin: 3rem;
+  }
+  
+  .customer {
+    background-color: var(--white);
+    border: 1px solid var(--outline);
+    border-radius: 0.5rem;
+    padding: 1rem;
+  }
+  
+  .customer-info {
+    color: var(--info);
+    font-family: "Roboto", sans-serif;
+  }
+  
+  .customer-header {
+    font-size: larger;
+    font-weight: 700;
+    line-height: 3rem;
+    color: var(--primary);
+  }
